do not create new objects for long values and remove blank lines