@@ -242,7 +242,7 @@ public class RetriableFileCopyCommand extends RetriableCommand {
       if (received.containsKey(window)) {
         received.put(window, received.get(window) + 1);
       } else {
-        received.put(window, new Long(1));
+        received.put(window, Long.valueOf(1));
       }
     }
   }
